# rag_pdf_reader

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/auth/: __init__.py  api-keys.json  auth_guard.py  routes.py  serializer.py  service.py
app/cli/: model.py
app/core/: embedder.py  extract_pdf.py
app/database/: config.py
app/pdf/: __init__.py  repository.py  routes.py  services.py
app/utils/: generative_ai.py  helpers.py
app/utils/core/: embedder.py
config/: log_config.yml
frontend/: Dockerfile  app.py
logger/: formatter.py
tests/: test_core_functions.py  test_main.py  test_pdf.py
